add report test

--- a/AlpaStock.Api/appsettings.json
+++ b/AlpaStock.Api/appsettings.json
@@ -9,6 +9,7 @@
   "ConnectionStrings": {
     "ProdDb": "User Id=postgres.gvcwrkreausxnkoqwtpd;Password=World567@1234;Server=aws-0-eu-central-1.pooler.supabase.com;Port=5432;Database=postgres"
   },
+  "AdminMail": "Bsaheed79@gmail.com",
   "StockIntervalSeconds": 30000,
   "FMP": {
     "APIKEY": "LEVbD6xEoeRRBG4kPTVMVpk39W7P0j8k",
@@ -45,8 +46,8 @@
   "EmailConfiguration": {
     "Host": "smtp.gmail.com",
     "Port": 465,
-    "UserName": "quiqsheet@gmail.com",
-    "Password": "ouulkcgnrgvnwsmm"
+    "UserName": "bsaheed79@gmail.com",
+    "Password": "vsdrrokbmfdqtwau"
   },
   "AllowedHosts": "*"
 }
