--- a/AlpaStock.Api/appsettings.json
+++ b/AlpaStock.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ProdDb": "User Id=postgres.gvcwrkreausxnkoqwtpd;Password=World567@1234;Server=aws-0-eu-central-1.pooler.supabase.com;Port=5432;Database=postgres"
+    "ProdDb": "User ID=alphadb_9lp1_user;Password=5r3k6NIPpeqiaiy5FIwToI8djF87KAv8;Host=dpg-d26fd395pdvs73eis4c0-a.oregon-postgres.render.com;Port=5432;Database=alphadb_9lp1;Pooling=true;SSL Mode=Require;Trust Server Certificate=True;"
   },
   "AdminMail": "Bsaheed79@gmail.com",
   "StockIntervalSeconds": 30000,
